--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,39 +1,6 @@
 ---
-title: "Nice"
+title: "Introduction"
 ---
 
-This is my first documentation page!
-
-# Is it cool?
-
-## Nope
-gjbhnmkl rfgyhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh hhhhhhhhhhhhhhhhhhhhhhhhhhhhh hhhhhhhhhhhhhhhhhhhhhhhh hhhhhhhhhhhhhhhhhhhhhhhhhhh 
-bjh
-orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent cursus ultricies ligula et vulputate. Nam felis urna, congue vitae ex ac, convallis semper nisl. Integer convallis fringilla ipsum, in accumsan augue scelerisque quis. Curabitur cursus justo quam. Nullam commodo lacus a tincidunt rhoncus. Ut non vulputate ipsum. Curabitur a ullamcorper lorem, convallis viverra purus. Nam lobortis, arcu nec finibus mattis, ante augue finibus dolor, eu commodo odio nisi vitae urna.
-
-Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam nec lectus augue. Sed quam leo, efficitur non nibh id, dignissim rhoncus ex. Curabitur ligula urna, lacinia vitae ipsum a, consequat facilisis erat. Donec fermentum eu nisi vitae malesuada. Ut nec turpis non ante sollicitudin iaculis id sed nulla. Praesent rhoncus nunc non tempor varius. Vestibulum elit nisl, euismod nec finibus non, sodales a tellus. Donec et ornare leo. Ut odio urna, rhoncus ac neque tincidunt, dignissim semper orci.
-
-Quisque ligula neque, pulvinar a erat vitae, aliquet sagittis odio. Aenean euismod sagittis congue. Proin ut ligula aliquet, varius justo sed, pulvinar nunc. Vivamus a vehicula odio. Maecenas ut interdum elit, vel tempor sem. Integer vestibulum egestas dui. Donec quis mi libero. Donec euismod dolor eget neque dapibus sagittis. Etiam at porttitor est. Donec augue ipsum, rutrum non porta id, interdum id ante. Morbi posuere posuere justo, sit amet commodo nibh lacinia id. Praesent non sapien ipsum. Vestibulum elementum placerat suscipit. Sed id nibh ut lacus convallis viverra vel quis libero. Duis nec lorem urna. Suspendisse lacinia consectetur dui et consectetur.
-
-Phasellus eu augue lectus. Duis pretium nec turpis quis tempus. Integer et orci eu metus egestas posuere. Nullam pulvinar auctor euismod. Fusce vel eros mollis, vestibulum enim sit amet, elementum leo. Cras molestie neque ac scelerisque eleifend. Aliquam sed eros eget ante ultricies aliquet. Sed in leo ante. Maecenas laoreet quam in nisl interdum, sit amet pellentesque elit sodales. Curabitur vulputate velit a orci ultricies, nec bibendum justo mollis. In eu imperdiet orci. 
-hb
-
-## Nice
-jbhvuytg. 
-njh
-orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent cursus ultricies ligula et vulputate. Nam felis urna, congue vitae ex ac, convallis semper nisl. Integer convallis fringilla ipsum, in accumsan augue scelerisque quis. Curabitur cursus justo quam. Nullam commodo lacus a tincidunt rhoncus. Ut non vulputate ipsum. Curabitur a ullamcorper lorem, convallis viverra purus. Nam lobortis, arcu nec finibus mattis, ante augue finibus dolor, eu commodo odio nisi vitae urna.
-
-Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam nec lectus augue. Sed quam leo, efficitur non nibh id, dignissim rhoncus ex. Curabitur ligula urna, lacinia vitae ipsum a, consequat facilisis erat. Donec fermentum eu nisi vitae malesuada. Ut nec turpis non ante sollicitudin iaculis id sed nulla. Praesent rhoncus nunc non tempor varius. Vestibulum elit nisl, euismod nec finibus non, sodales a tellus. Donec et ornare leo. Ut odio urna, rhoncus ac neque tincidunt, dignissim semper orci.
-
-Quisque ligula neque, pulvinar a erat vitae, aliquet sagittis odio. Aenean euismod sagittis congue. Proin ut ligula aliquet, varius justo sed, pulvinar nunc. Vivamus a vehicula odio. Maecenas ut interdum elit, vel tempor sem. Integer vestibulum egestas dui. Donec quis mi libero. Donec euismod dolor eget neque dapibus sagittis. Etiam at porttitor est. Donec augue ipsum, rutrum non porta id, interdum id ante. Morbi posuere posuere justo, sit amet commodo nibh lacinia id. Praesent non sapien ipsum. Vestibulum elementum placerat suscipit. Sed id nibh ut lacus convallis viverra vel quis libero. Duis nec lorem urna. Suspendisse lacinia consectetur dui et consectetur.
-
-Phasellus eu augue lectus. Duis pretium nec turpis quis tempus. Integer et orci eu metus egestas posuere. Nullam pulvinar auctor euismod. Fusce vel eros mollis, vestibulum enim sit amet, elementum leo. Cras molestie neque ac scelerisque eleifend. Aliquam sed eros eget ante ultricies aliquet. Sed in leo ante. Maecenas laoreet quam in nisl interdum, sit amet pellentesque elit sodales. Curabitur vulputate velit a orci ultricies, nec bibendum justo mollis. In eu imperdiet orci. 
-
-### What?
-orem ipsum dolor sit amet, consectetur adipiscing elit. Praesent cursus ultricies ligula et vulputate. Nam felis urna, congue vitae ex ac, convallis semper nisl. Integer convallis fringilla ipsum, in accumsan augue scelerisque quis. Curabitur cursus justo quam. Nullam commodo lacus a tincidunt rhoncus. Ut non vulputate ipsum. Curabitur a ullamcorper lorem, convallis viverra purus. Nam lobortis, arcu nec finibus mattis, ante augue finibus dolor, eu commodo odio nisi vitae urna.
-
-Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam nec lectus augue. Sed quam leo, efficitur non nibh id, dignissim rhoncus ex. Curabitur ligula urna, lacinia vitae ipsum a, consequat facilisis erat. Donec fermentum eu nisi vitae malesuada. Ut nec turpis non ante sollicitudin iaculis id sed nulla. Praesent rhoncus nunc non tempor varius. Vestibulum elit nisl, euismod nec finibus non, sodales a tellus. Donec et ornare leo. Ut odio urna, rhoncus ac neque tincidunt, dignissim semper orci.
-
-Quisque ligula neque, pulvinar a erat vitae, aliquet sagittis odio. Aenean euismod sagittis congue. Proin ut ligula aliquet, varius justo sed, pulvinar nunc. Vivamus a vehicula odio. Maecenas ut interdum elit, vel tempor sem. Integer vestibulum egestas dui. Donec quis mi libero. Donec euismod dolor eget neque dapibus sagittis. Etiam at porttitor est. Donec augue ipsum, rutrum non porta id, interdum id ante. Morbi posuere posuere justo, sit amet commodo nibh lacinia id. Praesent non sapien ipsum. Vestibulum elementum placerat suscipit. Sed id nibh ut lacus convallis viverra vel quis libero. Duis nec lorem urna. Suspendisse lacinia consectetur dui et consectetur.
-
-Phasellus eu augue lectus. Duis pretium nec turpis quis tempus. Integer et orci eu metus egestas posuere. Nullam pulvinar auctor euismod. Fusce vel eros mollis, vestibulum enim sit amet, elementum leo. Cras molestie neque ac scelerisque eleifend. Aliquam sed eros eget ante ultricies aliquet. Sed in leo ante. Maecenas laoreet quam in nisl interdum, sit amet pellentesque elit sodales. Curabitur vulputate velit a orci ultricies, nec bibendum justo mollis. In eu imperdiet orci. 
+Welcome to the Docs @ FMCorreia. This is the place where Filipe Correia hosts documentation for easy access!
+This website is always accessible at docs.fmcorreia.com! The main website is (fmcorreia.com)[fmcorreia.com]
