--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -3,4 +3,4 @@ title: "Introduction"
 ---
 
 Welcome to the Docs @ FMCorreia. This is the place where Filipe Correia hosts documentation for easy access!
-This website is always accessible at docs.fmcorreia.com! The main website is (fmcorreia.com)[fmcorreia.com]
+This website is always accessible at docs.fmcorreia.com! The main website is accessible at [fmcorreia.com](fmcorreia.com).
