--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,6 +5,6 @@ title: "Introduction"
 Welcome to the Docs @ FMCorreia. This is the place where Filipe Correia hosts documentation!  
 
 ## FMCorreia Network
-This website is part of the FMCorreia network. It follows [FMCorreia's privacy policy and terms of use](fmcorreia.com/privacy).   
+This website is part of the FMCorreia network. It follows [FMCorreia's privacy policy and terms of use](https://fmcorreia.com/privacy).   
 
-This website is always accessible at docs.fmcorreia.com! The main website is accessible at [fmcorreia.com](fmcorreia.com).  
+This website is always accessible at docs.fmcorreia.com! The main website is accessible at [fmcorreia.com](https://fmcorreia.com).  
